<resources>
    <string name="app_name">Camp Connect</string>
    <string name="need_an_account">Need an Account</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reg_number">Reg Number</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="year">Year</string>
    <string name="camp_state">Camp State</string>
    <string name="batch">Batch</string>
    <string name="select_here">Select Here</string>
    <string name="select">select</string>
    <string-array name="state_array">
        <item> </item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta	</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
        <item>FCT-Abuja</item>
    </string-array>
    <string-array name="year_array">
        <item> </item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string-array name="batch_array">
        <item> </item>
        <item>Batch A</item>
        <item>Batch B</item>
        <item>Batch C</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="platoon">Platoon *</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="account_settings">Account Settings</string>
    <string name="search">Search</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="log_out">Log Out</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="finish">Finish</string>
    <string name="message_heading">Message Heading</string>
    <string name="message_body">Message Body</string>
    <string name="post">Post</string>
    <string name="message_text">Message Text</string>
    <string name="_00_00">00:00</string>
</resources>
