<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryWhite"
    tools:context=".SearchActivity">

    <include
        android:id="@+id/search_page_toolbar"
        layout="@layout/app_bar_layout" />

    <Spinner
        android:id="@+id/search_spin_year"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/search_spin_batch"
        android:background="@drawable/search_layout"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_spin_state" />

    <Spinner
        android:id="@+id/search_spin_batch"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="143dp"
        android:background="@drawable/search_layout"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_spin_state" />

    <Spinner
        android:id="@+id/search_spin_state"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true"
        android:background="@drawable/search_layout"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_spin_state"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:text="@string/camp_state" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_spin_year"
        android:layout_alignStart="@+id/textView"
        android:text="@string/year" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_spin_year"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="132dp"
        android:text="@string/batch" />

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="197dp"
        android:background="@android:color/background_light"
        app:srcCompat="@mipmap/search_button" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_btn"
        android:layout_alignStart="@+id/search_spin_year">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="  Enter Reg Number"
            android:inputType="number"
            android:padding="5dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="243dp"
        android:background="@android:color/background_light"
        android:clipToPadding="true"></android.support.v7.widget.RecyclerView>

</RelativeLayout>
